@@ -3,7 +3,12 @@ What's New in IDLE 1.1a0?
 
 *Release date: XX-XXX-2004*
 
+- If the normal background is changed via Configure/Highlighting, it will update 
+  immediately, thanks to the previously mentioned patch.
+
 - Add a highlight theme for builtin keywords.  Python Patch 805830 Nigel Rowe
+  This also fixed IDLEfork bug [ 693418 ] Normal text background color not refreshed
+  and Python bug [897872 ] Unknown color name on HP-UX
 
 - rpc.py:SocketIO - Large modules were generating large pickles when downloaded
   to the execution server.  The return of the OK response from the subprocess
